--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -2,6 +2,9 @@
   <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
+        <div class="centered">
+          <h3> Dados do Incidente </h3>
+        </div>
       </div>
       <div class="panel-body">
         <%= form_for @incident, html: { multipart: true } do |f| %>
@@ -15,7 +18,7 @@
           <div class="form-group">
             <%= f.label :priority_level, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.select :priority_level, Incident::PRIORITY_LEVELS.keys, { prompt: "Selecione o nível de criticidade do incidente" }, { class: "form-control"} %>
+              <%= f.select :priority_level, Enumerations::PriorityLevel.keys, { prompt: "Selecione o nível de criticidade do incidente" }, { class: "form-control"} %>
             </div>
           </div>
 
@@ -40,7 +43,7 @@
           <div class="form-group">
             <%= f.label :plataform_kind, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.select :plataform_kind, Incident::PLATAFORM.keys, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
+              <%= f.select :plataform_kind, Enumerations::IncidentPlataform.keys, { prompt: "Selecione em qual plataforma ocorre o erro." }, { class: "form-control"} %>
             </div>
           </div>
 
