--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -62,35 +62,35 @@
         <td><%= incident.status %></td>
 
         <% if backofficer_signed_in? %>
-          <% if incident.status == 'open' || incident.status == 'reopened' %>
+          <% if incident.status == Enumerations::IncidentStatus::OPEN || incident.status == Enumerations::IncidentStatus::REOPENED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
-          <% elsif incident.status == 'solved' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-            <td><%= link_to 'Reabrir Incidente', reopen_form_path(id: incident.id), class: "btn btn-danger" %></td>
-          <% elsif incident.status == 'closed' %>
+            <td><%= link_to 'Reabrir Incidente', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
+          <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-default" %></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-          <% elsif incident.status == 'analysing' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
-          <% elsif incident.status == 'pending' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::PENDING %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary" %></td>
           <% end %>
-        <% else %>
+        <% elsif analyst_signed_in? %>
           <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-          <% if incident.status == 'open' %>
+          <% if incident.status == Enumerations::IncidentStatus::OPEN %>
             <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-            <% elsif incident.status == 'analysing' %>
+            <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-          <% elsif incident.status == 'pending' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::PENDING && current_analyst == incident.analyst %>
             <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-          <% elsif incident.status == 'solved' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
               <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
-          <% elsif incident.status == 'reopened' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::REOPENED %>
             <td><%= link_to 'Reiniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger" %></td>
-          <% elsif incident.status == 'closed' %>
+          <% elsif incident.status == Enumerations::IncidentStatus::CLOSED || (incident.status == Enumerations::IncidentStatus::PENDING && current_analyst != incident.analyst) %>
             <td><%= link_to 'Iniciar Análise', incident_analyse_path(incident.id), method: :patch, class: "btn btn-danger disabled", :disabled => true %></td>
           <% end %>
         <% end %>
