--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -53,14 +53,14 @@
             <div class="form-group">
               <%= f.label :Tipo, class:"col-md-3 control-label" %>
               <div class="col-md-9">
-                <%= f.select :problem_kind, Incident::PROBLEM_KINDS.keys, { prompt: "Selecione o tipo de problema do incidente" }, { class: "form-control"} %>
+                <%= f.select :problem_kind, Enumerations::ProblemKind.keys, { prompt: "Selecione o tipo de problema do incidente" }, { class: "form-control"} %>
               </div>
             </div>
 
             <div class="form-group">
               <%= f.label :Contexto, class:"col-md-3 control-label" %>
               <div class="col-md-9">
-                <%= f.select :entity, Incident::ENTITY.keys, { prompt: "Selecione o escopo do problema" }, { class: "form-control"} %>
+                <%= f.select :entity, Enumerations::IncidentEntity.keys, { prompt: "Selecione o escopo do problema" }, { class: "form-control"} %>
               </div>
             </div>
 
@@ -71,7 +71,7 @@
               </div>
             </div>
 
-            <%= f.hidden_field :status, value: 'solved' %>
+            <%= f.hidden_field :status, value: Enumerations::IncidentStatus::SOLVED %>
             <%= f.hidden_field :analyst_id, value: current_analyst.id %>
 
             <div class="form-group">
