incident to requisition

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-  <div class="panel-heading"><h3>Abertura de Incidente</h3></div>
+  <div class="panel-heading"><h3>Abertura de Requisição de Urgência</h3></div>
 </div>
 
 <%= render 'form', incident: @incident %>
