--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @incident, html: { multipart: true } do |f| %>
 
   <div class="panel panel-primary">
-    <div class="panel-heading">Resumo do Incidente</div>
+    <div class="panel-heading">Resumo da Requisição</div>
     <div class="panel-body">
       <table class="table table-condensed">
         <thead>
         <tr>
-          <th>ID do Incidente</th>
+          <th>ID da Requisição</th>
           <th>Título do Problema</th>
           <th>Email do Usuário Afetado</th>
           <th>Nível de Prioridade</th>
@@ -41,7 +41,7 @@
   </div>
 
   <div class="panel panel-primary">
-    <div class="panel-heading">Reabertura de Incidente</div>
+    <div class="panel-heading">Reabertura de Requisição</div>
   </div>
 
   <div class="container">
