--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,9 +1,9 @@
 <% if backofficer_signed_in? %>
   <div class="panel panel-primary">
-    <div class="panel-heading"><h3>Atualizar dados do Incidente</h3></div>
+    <div class="panel-heading"><h3>Atualizar dados do Requisição</h3></div>
   </div>
   <%= render 'form', incident: @incident %>
-  <%= link_to 'Lista de Incidentes', incidents_path, class: "btn btn-primary" %>
+  <%= link_to 'Lista de Requisições de Urgência', incidents_path, class: "btn btn-primary" %>
 <% else %>
   <%= render 'solve', incident: @incident %>
 <% end %>
