--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,10 +1,10 @@
 <div class="panel panel-primary">
-  <div class="panel-heading" ><h3>Listagem de Incidentes</h3></div>
+  <div class="panel-heading" ><h3>Listagem de Requisições de Urgência</h3></div>
 </div>
 
 <% if backofficer_signed_in? %>
   <div class="centered">
-    <td><%= link_to 'Novo Incidente', new_incident_path, class: "btn btn-success" %></td>
+    <td><%= link_to 'Abrir Requisição', new_incident_path, class: "btn btn-success" %></td>
   </div>
   <br />
 <% end %>
@@ -67,7 +67,7 @@
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
           <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-            <td><%= link_to 'Reabrir Incidente', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
+            <td><%= link_to 'Reabrir Requisição', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
           <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-default" %></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
