--- a/app/views/incidents/my_incidents.html.erb
+++ b/app/views/incidents/my_incidents.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-  <div class="panel-heading"><h3>Incidentes de <%= check_user.name %></h3></div>
+  <div class="panel-heading"><h3>Requisicões de <%= check_user.name %></h3></div>
 </div>
 
 <% if backofficer_signed_in? %>
@@ -13,7 +13,7 @@
   <table>
     <thead>
     <tr>
-      <th>ID do Incidente</th>
+      <th>ID do Requisição</th>
       <th>Resumo do Problema</th>
       <th>Nível de Criticidade</th>
       <th>Aberto Em</th>
@@ -51,7 +51,7 @@
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary"%></td>
           <% elsif incident.status == Enumerations::IncidentStatus::SOLVED %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
-            <td><%= link_to 'Reabrir Incidente', edit_incident_path(incident), class: "btn btn-danger" %></td>
+            <td><%= link_to 'Reabrir Requisição', edit_incident_path(incident), class: "btn btn-danger" %></td>
           <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
             <td><%= link_to 'Detalhes', edit_incident_path(incident), class: "btn btn-default" %></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
