--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @incident, html: { multipart: true } do |f| %>
 
     <div class="panel panel-primary">
-  <div class="panel-heading">Resumo do Incidente</div>
+  <div class="panel-heading">Resumo da Requisição</div>
   <div class="panel-body">
     <table class="table table-condensed">
       <thead>
       <tr>
-        <th>ID do Incidente</th>
+        <th>ID do Requisição</th>
         <th>Título do Problema</th>
         <th>Email do Usuário Afetado</th>
         <th>Nível de Prioridade</th>
@@ -41,7 +41,7 @@
 </div>
 
 <div class="panel panel-primary">
-  <div class="panel-heading">Resolução de Incidente</div>
+  <div class="panel-heading">Resolução da Requisição</div>
 </div>
 
   <div class="container">
@@ -53,7 +53,7 @@
             <div class="form-group">
               <%= f.label :Tipo, class:"col-md-3 control-label" %>
               <div class="col-md-9">
-                <%= f.select :problem_kind, Enumerations::ProblemKind.keys, { prompt: "Selecione o tipo de problema do incidente" }, { class: "form-control"} %>
+                <%= f.select :problem_kind, Enumerations::ProblemKind.keys, { prompt: "Selecione o tipo de problema do requisição" }, { class: "form-control"} %>
               </div>
             </div>
 
@@ -76,7 +76,7 @@
 
             <div class="form-group">
               <div class="col-md-offset-3 col-md-9">
-                <%= f.submit "Resolver Incidente", class:"btn btn-success" do %>
+                <%= f.submit "Resolver", class:"btn btn-success" do %>
                 <% end %>
               </div>
             </div>
