added idea in git ignore

--- a/app/views/incidents/my_incidents.html.erb
+++ b/app/views/incidents/my_incidents.html.erb
@@ -4,7 +4,7 @@
 
 <% if backofficer_signed_in? %>
   <div class="centered">
-    <td><%= link_to 'Novo Incidente', new_incident_path, class: "btn btn-success" %></td>
+    <td><%= link_to 'Abrir Requisição', new_incident_path, class: "btn btn-success" %></td>
   </div>
   <br />
 <% end %>
