--- a/app/views/backofficers/registrations/edit.html.erb
+++ b/app/views/backofficers/registrations/edit.html.erb
@@ -5,6 +5,9 @@
   <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
+        <div class="centered">
+          <h3>Dados para Reset</h3>
+        </div>
       </div>
       <div class="panel-body">
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
