--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-  <div class="panel-heading" ><h3>Listagem de Requisições de Urgência</h3></div>
+  <div class="panel-heading" ><h3>Listagem - Requisições de Urgência</h3></div>
 </div>
 
 <% if backofficer_signed_in? %>
@@ -17,7 +17,7 @@
           <div class="col-lg-3"></div>
           <div class="col-lg-6">
             <div class="input-group">
-              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar incidente..." }) %>
+              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar Requisição..." }) %>
               <span class="input-group-btn">
                 <%= submit_tag("Pesquisar", class:"btn btn-default") %>
               </span>
