--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -59,7 +59,7 @@
 
           <%= f.hidden_field :status, value: Enumerations::IncidentStatus::REOPENED %>
           <%= f.hidden_field :reopened_by, value: current_backofficer %>
-
+          <%= f.hidden_field :incident_reopened, value: true %>
 
           <div class="form-group">
             <div class="col-md-offset-3 col-md-9">
