label to incidents

--- a/app/views/analysts/registrations/new.html.erb
+++ b/app/views/analysts/registrations/new.html.erb
@@ -6,6 +6,9 @@
   <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
+        <div class="centered">
+          <h3>Dados do Analista</h3>
+        </div>
       </div>
       <div class="panel-body">
 
@@ -46,6 +49,6 @@
 
 <div class="centered">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Fazer Log in", new_session_path(resource_name), class: "btn btn-success" %><br />
+    <%= link_to "Fazer Login", new_session_path(resource_name), class: "btn btn-success" %><br />
   <% end -%>
 </div>
