--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -11,7 +11,7 @@
           <div class="form-group">
             <%= f.label :title, class:"col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder:"Usuario X com problema para ativar cobertura" %>
+              <%= f.text_field :title, autofocus: true, class:"form-control", placeholder:"Usuario com problema para ativar cobertura" %>
             </div>
           </div>
 
