--- a/app/views/incidents/reopen.html.erb
+++ b/app/views/incidents/reopen.html.erb
@@ -48,6 +48,9 @@
     <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
       <div class="panel panel-info">
         <div class="panel-heading">
+          <div class="centered">
+            <h3>Dados da Reabertura</h3>
+          </div>
         </div>
         <div class="panel-body">
           <div class="form-group">
