--- a/app/views/backofficers/registrations/edit.html.erb
+++ b/app/views/backofficers/registrations/edit.html.erb
@@ -25,7 +25,7 @@
               </div>
 
               <div class="form-group">
-                <%= f.label :Confirmar_Senha, class:"col-md-3 control-label" %>
+                <%= f.label :Confirmar_Nova_Senha, class:"col-md-3 control-label" %>
                 <div class="col-md-9">
                   <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
                 </div>
