--- a/app/views/backofficers/registrations/new.html.erb
+++ b/app/views/backofficers/registrations/new.html.erb
@@ -6,6 +6,9 @@
   <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
+        <div class="centered">
+          <h3>Dados do Backofficer</h3>
+        </div>
       </div>
       <div class="panel-body">
 
@@ -46,7 +49,7 @@
 </div>
 <div class="centered">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Fazer Log in", new_session_path(resource_name), class: "btn btn-success" %><br />
+    <%= link_to "Fazer Login", new_session_path(resource_name), class: "btn btn-success" %><br />
   <% end -%>
   <br />
   <%= link_to "Cadastrar Analista", new_analyst_registration_path, class: "btn btn-primary" %><br />
