--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -9,26 +9,7 @@
   <br />
 <% end %>
 
-<div class="container">
-  <%= form_tag search_path, method: :get do %>
-    <div class="row">
-      <div class="well well-sm">
-        <div class="row">
-          <div class="col-lg-3"></div>
-          <div class="col-lg-6">
-            <div class="input-group">
-              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar Requisição..." }) %>
-              <span class="input-group-btn">
-                <%= submit_tag("Pesquisar", class:"btn btn-default") %>
-              </span>
-            </div>
-          </div>
-          <div class="col-lg-3"></div>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
+<%= render 'search' %>
 
 <div class="basic-grey" align="center">
   <table>
@@ -39,8 +20,8 @@
       <th>Reportador por</th>
       <th>Aberto Em</th>
       <th>Última Atualização</th>
-      <th>Analista</th>
       <th>Status</th>
+      <th>Analista</th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -49,17 +30,41 @@
     <% @incidents.each do |incident| %>
       <tr style= "background: <%= cycle('white', 'ice') %>">
         <td><%= incident.title %></td>
-        <td><%= incident.priority_level %></td>
-        <td><%= incident.backofficer.name %> - <%= incident.backofficer.email %> </td>
 
+        <% if incident.priority_level == Enumerations::PriorityLevel::LOW %>
+          <td><span class='label label-info'><%= incident.priority_level %></span></td>
+        <% elsif incident.priority_level == Enumerations::PriorityLevel::MEDIUM %>
+          <td><span class='label label-warning'><%= incident.priority_level %></span></td>
+        <% elsif incident.priority_level == Enumerations::PriorityLevel::HIGH %>
+          <td><span class='label label-danger'><%= incident.priority_level %></span></td>
+          <% else %>
+          <td>fudeu</td>
+        <% end %>
+
+
+        <td><%= incident.backofficer.name %> - <%= incident.backofficer.email %> </td>
         <td><%= brazil_date(incident.created_at) %></td>
         <td><%= brazil_date(incident.updated_at) %></td>
+
+        <% if incident.status == Enumerations::IncidentStatus::SOLVED %>
+          <td><span class='label label-success'><%= incident.status %></span></td>
+        <% elsif incident.status == Enumerations::IncidentStatus::OPEN %>
+          <td><span class='label label-warning'><%= incident.status %></span></td>
+        <% elsif incident.status == Enumerations::IncidentStatus::PENDING %>
+          <td><span class='label label-info'><%= incident.status %></span></td>
+        <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
+          <td><span class='label label-default'><%= incident.status %></span></td>
+        <% elsif incident.status == Enumerations::IncidentStatus::REOPENED %>
+          <td><span class='label label-danger'><%= incident.status %></span></td>
+        <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
+          <td><span class='label label-primary'><%= incident.status %></span></td>
+        <% end %>
+
         <% if incident.analyst.blank? %>
-          <td><%= 'Sem atendimento' %> </td>
+          <td><%= '  -    '%> </td>
         <% else %>
           <td><%= incident.analyst.name %> </td>
         <% end %>
-        <td><%= incident.status %></td>
 
         <% if backofficer_signed_in? %>
           <% if incident.status == Enumerations::IncidentStatus::OPEN || incident.status == Enumerations::IncidentStatus::REOPENED %>
@@ -69,7 +74,7 @@
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
             <td><%= link_to 'Reabrir Requisição', reopen_path(id: incident.id), class: "btn btn-danger" %></td>
           <% elsif incident.status == Enumerations::IncidentStatus::CLOSED %>
-            <td><%= link_to 'Detalhes', incident, class: "btn btn-default" %></td>
+            <td><%= link_to 'Detalhes', incident, class: "btn btn-primary" %></td>
             <td><%= link_to 'Editar Dados', edit_incident_path(incident), class: "btn btn-primary disabled", :disabled => true %></td>
           <% elsif incident.status == Enumerations::IncidentStatus::ANALYSING %>
             <td><%= link_to 'Detalhes', incident, class: "btn btn-primary"%></td>
