--- a/app/views/incidents/search.html.erb
+++ b/app/views/incidents/search.html.erb
@@ -2,26 +2,8 @@
   <div class="panel-heading" ><h3>Listagem de Requisições</h3></div>
 </div>
 
-<div class="container">
-  <%= form_tag search_path, method: :get do %>
-    <div class="row">
-      <div class="well well-sm">
-        <div class="row">
-          <div class="col-lg-3"></div>
-          <div class="col-lg-6">
-            <div class="input-group">
-              <%= text_field_tag(:q, params[:q], { class:"form-control", placeholder:"Pesquisar requisição..." }) %>
-              <span class="input-group-btn">
-                <%= submit_tag("Pesquisar", class:"btn btn-default") %>
-              </span>
-            </div>
-          </div>
-          <div class="col-lg-3"></div>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
+<%= render 'search' %>
+
 <div class="basic-grey" align="center">
   <table>
     <thead>
