--- a/app/views/incidents/solve.html.erb
+++ b/app/views/incidents/solve.html.erb
@@ -1,5 +1,4 @@
-<%= form_for @incident, html: { multipart: true } do |f| %>
-
+<%= form_for @incident, :url => incident_solution_path(@incident) do |f| %>
   <div class="panel panel-primary">
   <div class="panel-heading">Resumo da Requisição</div>
   <div class="panel-body">
