--- a/app/views/incidents/pending.html.erb
+++ b/app/views/incidents/pending.html.erb
@@ -7,7 +7,7 @@
         <thead>
         <tr>
           <th>ID do Requisição</th>
-          <th>Título do Problema</th>
+          <th>Resumo do Problema</th>
           <th>Email do Usuário Afetado</th>
           <th>Nível de Prioridade</th>
           <th>Reportador Por</th>
