--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -62,7 +62,7 @@
     <table class="table table-condensed">
       <thead>
       <tr>
-        <th>Título do Problema</th>
+        <th>Resumo do Problema</th>
         <th>Email do Usuário</th>
         <th>Número do Contrato</th>
         <th>CPF do Usuário</th>
