--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if signed_in? %>
             <ul class="nav navbar-nav pull-right">
-              <li class="nav-item"><%= link_to "Meus Incidentes", my_incidents_path %></li>
+              <li class="nav-item"><%= link_to "Minhas Requisições", my_incidents_path %></li>
               <li class="nav-item"><%= link_to "Meus Dados", edit_registration_path(check_user) %></li>
               <li class="nav-item"><%= link_to "Sair", destroy_session_path(check_user), method: "delete" %></li>
           <% else %>
